# testpython

./: README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_metrics.py  test_model.py
wine_model/: data.py  metrics.py  model.py  train.py
